Actions
Bug #7360
closedcould be more forgiving of bad smbios tables
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
kernel
Start date:
2016-09-06
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
On Lenovo x3650 and x3550 M5s (at least), the last item in the smbios table runs past the end of the table, which causes smbios_bufopen to fail, setting the error to ESMB_CORRUPT. The last item is some vendor-specific thing that no one needs to look at, so it seems a bit unnecessary to deem the entire table corrupt as a result.
For comparison, Linux just ignores the item in this case, and OpenBSD doesn't even look at it, as it stops scanning the table when it finds the entry it wants.
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 516627f338a630bcf9806a91aa873bbbae9a2fac
commit 516627f338a630bcf9806a91aa873bbbae9a2fac Author: Jonathan Matthew <jonathan@uq.edu.au> Date: 2016-10-20T22:34:17.000Z 7360 could be more forgiving of bad smbios tables Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions